<resources>
    <string name="app_name">Snapshots</string>
    <string name="home_title">Home</string>
    <string name="add_title">Seleccione una imagen</string>
    <string name="profile_title">Profile</string>
    <string name="txt_welcome">Welcome...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_eliminar">Eliminar</string>
    <string name="txt_login">Login</string>
    <string name="hint_email">E-mail:</string>
    <string name="hint_pwd">Password</string>
    <string name="txt_registrar">Registrar</string>
    <string name="txt_entrar">Entrar</string>
    <string name="txt_user_register">Registro de Usuario</string>
    <string name="hint_confirm_pwd">Confirmar password</string>
    <string name="msg_error">An error ocurred</string>
    <string name="home_add">Add</string>
    <string name="home_profile">Profile</string>
    <string name="lbl_publicar">Publicar</string>
    <string name="hint_msg_Instantanea">Titulo de la instantanea</string>
    <string name="post_message_valid_title">Por favor añada un título</string>
    <string name="nameFolder">MyPhoto</string>
    <string name="lbl_logout">Cerrar sesion</string>
    <string name="name_user">Nombre completo:</string>
</resources>