<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.user.views.UserRegisterFragment">

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="@dimen/space_60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_user_register"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/text_size_24sp"
        android:fontFamily="@font/roboto_bold_italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/space_60dp"
        android:textColorHint="@color/purple_200"
        android:background="@color/white"
        app:startIconDrawable="@drawable/ic_sign"
        android:fontFamily="@font/roboto_bold_italic"
        android:hint="@string/hint_email"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_userName"
            android:layout_width="@dimen/space_280"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/text_size_16sp"
            android:minLines="@integer/min_lines"
            android:text="Admin@patytdch.com"
            android:inputType="textEmailAddress"
            android:textColorLink="@color/purple_200"
            android:background="@color/white"
            android:fontFamily="@font/roboto_bold_italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ti_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/space_20dp"
        android:textColorHint="@color/purple_200"
        android:background="@color/white"
        app:startIconDrawable="@drawable/ic_password"
        android:fontFamily="@font/roboto_bold_italic"
        android:hint="@string/hint_pwd"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_pwd"
            android:layout_width="@dimen/space_280"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_200"
            android:background="@color/white"
            android:textSize="@dimen/text_size_16sp"
            android:minLines="@integer/min_lines"
            android:text="Pwd12345"
            android:inputType="textPassword"
            android:textColorLink="@color/purple_200"
            android:fontFamily="@font/roboto_bold_italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_confirm_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ti_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/space_20dp"
        android:textColorHint="@color/purple_200"
        android:background="@color/white"
        app:startIconDrawable="@drawable/ic_password"
        android:fontFamily="@font/roboto_bold_italic"
        android:hint="@string/hint_confirm_pwd"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_confirm_pwd"
            android:layout_width="@dimen/space_280"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_200"
            android:background="@color/white"
            android:textSize="@dimen/text_size_16sp"
            android:minLines="@integer/min_lines"
            android:text="Pwd12345"
            android:inputType="textPassword"
            android:textColorLink="@color/purple_200"
            android:fontFamily="@font/roboto_bold_italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_registar"
        android:text="@string/txt_registrar"
        android:textSize="@dimen/text_size_16sp"
        android:fontFamily="@font/roboto_bold_italic"
        android:layout_marginTop="@dimen/space_60dp"
        android:layout_marginStart="@dimen/space_60dp"
        android:layout_marginEnd="@dimen/space_60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_confirm_pwd"
        />

</androidx.constraintlayout.widget.ConstraintLayout>