<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.add.views.AddFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_post"
        android:text="@string/lbl_publicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="@dimen/spacing_0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_title"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginTop="@dimen/space_20dp"
        android:textColor="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_post"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btn_post"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_title_instant"
        android:layout_width="@dimen/spacing_0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/btn_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_8dp"
        android:textColorHint="@color/purple_200"
        android:background="@color/white"
        android:fontFamily="@font/roboto_bold_italic"
        android:hint="@string/hint_msg_Instantanea">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_title_instant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_200"
            android:minLines="@integer/min_lines"
            android:background="@color/white"
            android:fontFamily="@font/roboto_bold_italic" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="@dimen/spacing_0dp"
        android:layout_height="@dimen/spacing_0dp"
        android:layout_marginTop="@dimen/spacing_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_title_instant"
        app:layout_constraintDimensionRatio="H, 4:3" />
    <ImageButton
        android:id="@+id/btn_select"
        android:layout_width="@dimen/spacing_0dp"
        android:layout_height="@dimen/spacing_0dp"
        android:src="@drawable/image_search"
        android:scaleType="centerCrop"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="@id/img_photo"
        app:layout_constraintEnd_toEndOf="@id/img_photo"
        app:layout_constraintTop_toTopOf="@id/img_photo"
        app:layout_constraintBottom_toBottomOf="@id/img_photo"/>

</androidx.constraintlayout.widget.ConstraintLayout>